feat: 重构博客页面并添加新功能
- 新增技术博客和随笔页面，使用卡片布局展示文章
- 添加搜索功能，支持按标题、描述和标签筛选
- 引入新的UI组件库(@mui/material)和样式工具(@emotion)
- 更新网站元数据，包括标题、作者和logo
- 删除旧图片资源，添加新的背景图片和HTML模板
- 优化布局和样式，提升用户体验

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "content": "velite --clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@lottiefiles/dotlottie-react": "^0.12.0",
+    "@mui/material": "^7.3.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.47.9",
     "@tailwindcss/forms": "^0.5.5",
